--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -13,6 +13,20 @@
   }
 }
 
+ul {
+  list-style-type: none;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+#icon-container {
+  float: left;
+  margin-right: 10px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
