--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -3,6 +3,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-family: 'Roboto', 'Segoe UI', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #eaeaea !important;
@@ -69,4 +72,191 @@ code {
   margin-top: auto;
   margin-bottom: auto;
   padding-left: 10px;
+}
+
+#activity-dashboard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  max-width: 100%;
+  min-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#activity-list {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#activity-list-container {
+  width: 50%;
+  min-width: 500px;
+  padding: 0 1rem;
+  background-color: white;
+  box-shadow: 4px 4px 4px #cecdcd;
+}
+
+#activity-item {
+  padding-bottom: 3rem;
+  border-bottom:1px solid rgb(196, 195, 195);
+  min-width: 452px;
+}
+
+#activity-title {
+  color: rgb(72, 103, 226);
+  margin-bottom: 0;
+}
+
+#activity-date {
+  color:rgb(160, 155, 155);
+  margin: 0.5rem 0;
+  margin-top: 0.3rem;
+}
+
+#activity-description {
+  font-weight: 500;
+}
+
+#activity-location {
+  font-weight: 500;
+}
+
+#activity-category {
+  border-radius: 5px;
+  border: 1px #a5a4a4 solid;
+  padding: 0.1rem 0.3rem;
+}
+
+#view-btn {
+  color: white;
+  background-color: rgb(72, 103, 226);
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 0.5rem 1.1rem;
+  float: right;
+}
+
+#delete-btn {
+  color: white;
+  background-color: rgb(226, 72, 80);
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 0.5rem 1.1rem;
+  float: right;
+  margin-right: 1rem;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+#space-top {
+  padding-top: 1rem;
+}
+
+#activity-details {
+  width: 100%;
+  border-radius: 5px;
+  background-color: white;
+  padding-bottom: 1rem;
+  overflow: hidden;
+  align-self: baseline;
+  box-shadow: 4px 4px 4px #cecdcd;
+}
+#activity-details > img {
+  max-width: 100%;
+}
+
+#activity-detail-buttons {
+  border-top: 1px solid #cecdcd;
+  margin-top: 1rem;
+  padding-top: 1rem;
+  margin-bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+#edit-activity-btn {
+  color: rgb(72, 103, 226);
+  border: 1px solid rgb(52, 86, 221);
+  padding: 0.5rem 2rem;
+  padding-left: auto;
+  padding-right: auto;
+  margin-left: auto;
+}
+
+#cancel-activity-btn {
+  color:rgb(187, 186, 186);
+  border: 1px solid rgb(202, 202, 202);
+  padding: 0.5rem 2rem;
+  padding-left: auto;
+  padding-right: auto;
+  margin-right: auto;
+}
+
+form {
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 4px 4px 4px #cecdcd;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-width: 400px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.activityForm {
+  margin-top: 3rem;
+  width: 100%;
+  align-self: baseline;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  min-width: 450px;
+}
+
+input:focus{
+  outline: 2px solid rgb(17, 62, 211);
+  border-radius: 1px;
+  border: none;
+  opacity: 0.7;
+}
+textarea:focus{
+  outline: 2px solid rgb(17, 62, 211);
+  border-radius: 1px;
+  border: none;
+  opacity: 0.7;
+}
+
+.activityForm > input, textarea {
+  opacity: 0.5;
+}
+
+.padding-round-1 {
+  padding: 1rem;
+}
+
+.margin-round-1 {
+  margin: 1rem;
+}
+
+.margin-1UP-halfLR{
+  margin: 0.5rem 1rem;
 }
