--- a/client-app/src/app/layout/App.css
+++ b/client-app/src/app/layout/App.css
@@ -50,3 +50,86 @@ header {
     transform: rotate(360deg);
   }
 }
+
+.small-round-img {
+  padding-left: 0.7rem;
+  width: 5rem;
+  border-radius: 50%;
+}
+
+.meeting-header {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 0.7rem;
+  display: flex;
+  flex-direction: row;
+  border-bottom: solid  2px rgba(199, 199, 199, 0.521);
+}
+
+.meeting-header-text {
+  padding-left: 2rem;
+}
+
+.attendees {
+  border-top: solid  2px rgba(199, 199, 199, 0.521);
+  border-bottom: solid  2px rgba(199, 199, 199, 0.521);
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  margin-bottom: 0.7rem;
+  margin-top: 0.7rem;
+  background-color: rgb(244, 244, 244);
+  padding-left: 1rem;
+  color: rgb(128, 128, 128);
+}
+
+.meeting-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.meeting-details {
+  padding-left: 1rem;
+}
+
+.group-text {
+  color: #32c2bd;
+  text-shadow: 1px 1px rgba(255, 192, 203, 0.075);
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding-top: 1rem;
+}
+
+.filter-panel {
+  background-color: white;
+  text-shadow: 1px 1px rgba(255, 192, 203, 0.075);
+  border: solid  2px rgba(199, 199, 199, 0.521);
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+
+.filter-header {
+  padding: 0.7rem 1rem;
+  border-bottom: solid  2px rgba(199, 199, 199, 0.521);
+  color: turquoise;
+  font-weight: 450;
+  font-size: 1.2rem;
+}
+
+.filter-option {
+  padding-left: 1rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.3rem;
+  border-bottom: solid  1px rgba(199, 199, 199, 0.521);
+}
+
+.filter-options {
+  margin: 0;
+}
+
+.filter {
+  margin-right: 1rem;
+  margin-top: 3.5rem;
+}
