--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -48,14 +48,30 @@ code {
   justify-content: center;
   align-items: center;
   align-content: center;
+  z-index: 99;
 }
 
 .create-btn {
   text-decoration: none;
+  border: 1px solid #a5a4a4;
   background-color: rgb(37, 185, 37);
-  color: rgb(212, 240, 200);
+  color: white;
   padding: 0.5rem 1rem;
   border-radius: 5px;
+  margin-left: 1rem;
+}
+
+.submit-btn {
+  text-decoration: none;
+  border: 1px solid #a5a4a4;
+  background-color: rgb(37, 185, 37);
+  color: white;
+  padding: auto;
+  border-radius: 5px;
+  margin-left: 1rem;
+  width: 5rem;
+  height: 2.2rem;
+  text-align: center;
 }
 
 #logo {
@@ -95,11 +111,14 @@ code {
 }
 
 #activity-list-container {
-  width: 50%;
+  width: 80%;
   min-width: 500px;
-  padding: 0 1rem;
+  padding: 0 0.2rem;
   background-color: white;
   box-shadow: 4px 4px 4px #cecdcd;
+  border: 2px solid rgba(116, 115, 115, 0.274);
+  border-radius: 5px;
+  margin-bottom: 0;
 }
 
 #activity-list-container li:last-child {
@@ -107,14 +126,15 @@ code {
 }
 
 #activity-item {
-  padding-bottom: 3rem;
-  border-bottom:1px solid rgb(196, 195, 195);
+  padding-bottom: 1rem;
+  border-bottom:1px solid rgb(160, 159, 159);
   min-width: 452px;
 }
 
 #activity-title {
-  color: rgb(72, 103, 226);
+  color: rgb(95, 95, 95);
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 #activity-date {
@@ -139,7 +159,7 @@ code {
 
 #view-btn {
   color: white;
-  background-color: rgb(72, 103, 226);
+  background-color: rgb(46, 190, 154);
   border-radius: 5px;
   text-decoration: none;
   padding: 0.5rem 1.1rem;
@@ -165,7 +185,10 @@ code {
 }
 
 #activity-details {
+  height: 100%;
   width: 100%;
+  min-height: 30rem;
+  max-height: 30rem;
   border-radius: 5px;
   background-color: white;
   padding-bottom: 1rem;
@@ -380,4 +403,85 @@ to {
 
 .currentLink {
   pointer-events: all;
+}
+
+.center-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 100%;
+}
+
+.center-content-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.img-container {
+  height: calc(100% - 3rem);
+  width: 100%;
+  position: relative;
+}
+
+.image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+.text {
+  z-index: 100;
+  position: absolute;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  left: 150px;
+  top: 350px;
+}
+
+.activity-detail-column {
+  height: 100%;
+}
+
+.react-calendar {
+  border: none;
+  text-shadow: 1px 1px rgba(255, 192, 203, 0.075);
+}
+
+.home-header {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(
+    135deg,
+    rgb(24, 42, 115) 0%,
+    rgb(33, 138, 173) 69%,
+    rgb(32, 167, 173) 89%
+  ) !important;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.activities-link {
+  text-decoration: none;
+  padding: 0.5rem 1.3rem;
+  border: 1px solid white;
+  color: white;
+}
+
+.cancel-btn {
+  text-decoration: none;
+  color: white;
+  background-color: #cecdcd;
+  border: 1px solid #a5a4a4;
+  padding: 0.4rem 0.9rem;
+  border-radius: 5px;
+  width: 4rem;
+  height: 2rem;
 }
