Starting S11 with Semantic-UI instead of css

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -1,528 +1,40 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-    font-family: 'Roboto', 'Segoe UI', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-color: #eaeaea !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ui.inverted.top.fixed.menu{
+  background-image: linear-gradient(135deg, rgb(24,42,115) 0%, rgb(33,138,174) 69%, rgb(32,167,172) 89%) !important;
 }
 
-#NavBar {
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-  font-weight: 550;
-}
-
-#NavBar > li {
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
-  border-right: 1px solid rgb(175, 173, 173);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#nav-parent {
-  background-color: rgb(20, 20, 20);
-  background-image: linear-gradient(135deg, rgb(24, 42, 115) 0%, rgb(33, 138, 174) 69%, rgb(32, 167, 172) 89%) !important;
-  color: rgb(240, 240, 240);
-  top: 0px;
-  margin: 0;
-  position: fixed;
+.react-calendar{
   width: 100%;
-  height: 4rem;
-  padding-top: auto;
-  padding-bottom: auto;
+  border: none;
+  box-shadow: 0 1px 2px 0 rgba(34, 36, 38, .15);
+}
+
+.masthead {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  align-content: center;
-  z-index: 99;
-}
-
-.create-btn {
-  text-decoration: none;
-  border: 1px solid #a5a4a4;
-  background-color: rgb(37, 185, 37);
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  margin-left: 1rem;
-}
-
-.submit-btn {
-  text-decoration: none;
-  border: 1px solid #a5a4a4;
-  background-color: rgb(37, 185, 37);
-  color: white;
-  padding: auto;
-  border-radius: 5px;
-  margin-left: 1rem;
-  width: 5rem;
-  height: 2.2rem;
-  text-align: center;
-}
-
-#logo {
-  height: 3rem;
-}
-
-#logo-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-#logo-description {
-  margin-top: auto;
-  margin-bottom: auto;
-  padding-left: 10px;
-}
-
-#activity-dashboard {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  max-width: 100%;
-  min-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#activity-list {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#activity-list-container {
-  width: 80%;
-  min-width: 500px;
-  padding: 0 0.2rem;
-  background-color: white;
-  box-shadow: 4px 4px 4px #cecdcd;
-  border: 2px solid rgba(116, 115, 115, 0.274);
-  border-radius: 5px;
-  margin-bottom: 0;
-}
-
-#activity-list-container li:last-child {
-  border-bottom: none;
-}
-
-#activity-item {
-  padding-bottom: 1rem;
-  border-bottom:1px solid rgb(160, 159, 159);
-  min-width: 452px;
-}
-
-#activity-title {
-  color: rgb(95, 95, 95);
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-#activity-date {
-  color:rgb(160, 155, 155);
-  margin: 0.5rem 0;
-  margin-top: 0.3rem;
-}
-
-#activity-description {
-  font-weight: 500;
-}
-
-#activity-location {
-  font-weight: 500;
-}
-
-#activity-category {
-  border-radius: 5px;
-  border: 1px #a5a4a4 solid;
-  padding: 0.1rem 0.3rem;
-}
-
-#view-btn {
-  color: white;
-  background-color: rgb(46, 190, 154);
-  border-radius: 5px;
-  text-decoration: none;
-  padding: 0.5rem 1.1rem;
-  float: right;
-}
-
-#delete-btn {
-  color: white;
-  background-color: rgb(226, 72, 80);
-  border-radius: 5px;
-  text-decoration: none;
-  padding: 0.5rem 1.1rem;
-  float: right;
-  margin-right: 1rem;
-}
-
-.btn:hover {
-  cursor: pointer;
-}
-
-#space-top {
-  padding-top: 1rem;
-}
-
-#activity-details {
-  height: 100%;
-  width: 100%;
-  min-height: 30rem;
-  max-height: 30rem;
-  border-radius: 5px;
-  background-color: white;
-  padding-bottom: 1rem;
-  overflow: hidden;
-  align-self: baseline;
-  box-shadow: 4px 4px 4px #cecdcd;
-}
-#activity-details > img {
-  max-width: 100%;
-}
-
-#activity-detail-buttons {
-  border-top: 1px solid #cecdcd;
-  margin-top: 1rem;
-  padding-top: 1rem;
-  margin-bottom: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-#edit-activity-btn {
-  color: rgb(72, 103, 226);
-  border: 1px solid rgb(52, 86, 221);
-  padding: 0.5rem 2rem;
-  padding-left: auto;
-  padding-right: auto;
-  margin-left: auto;
-}
-
-#cancel-activity-btn {
-  color:rgb(187, 186, 186);
-  border: 1px solid rgb(202, 202, 202);
-  padding: 0.5rem 2rem;
-  padding-left: auto;
-  padding-right: auto;
-  margin-right: auto;
-}
-
-form {
-  border-radius: 5px;
-  background-color: white;
-  box-shadow: 4px 4px 4px #cecdcd;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  min-width: 400px;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-}
-
-.activityForm {
-  margin-top: 3rem;
-  width: 100%;
-  align-self: baseline;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  min-width: 450px;
-}
-
-input:focus{
-  outline: 2px solid rgba(134, 134, 134, 0.5);
-  border-radius: 1px;
-  border: none;
-  opacity: 0.7;
-}
-textarea:focus{
-  outline: 2px solid rgba(134, 134, 134, 0.5);
-  border-radius: 1px;
-  border: none;
-  opacity: 0.7;
-}
-
-.opacity-50 {
-  opacity: 0.5;
-}
-
-.activityForm > form {
-  width: 40%;
-}
-
-
-.padding-round-1 {
-  padding: 1rem;
-}
-
-.margin-round-1 {
-  margin: 1rem;
-}
-
-.margin-1UP-halfLR{
-  margin: 0.5rem 1rem;
-}
-
-.loader {
-  font-size: 10px;
-  margin: 20px auto;
-  text-indent: -9999em;
-  width: 11em;
-  height: 11em;
-  border-radius: 50%;
-  background: #000000;
-  background: -moz-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-  background: -webkit-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-  background: -o-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-  background: -ms-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-  background: linear-gradient(to right, #000000 10%, rgba(255, 255, 255, 0) 42%);
-  position: relative;
-  -webkit-animation: load3 1.4s infinite linear;
-  animation: load3 1.4s infinite linear;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.loader:before {
-  width: 50%;
-  height: 50%;
-  background: #000000;
-  border-radius: 100% 0 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-}
-.loader:after {
-  background: #eaeaea;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  content: '';
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-@-webkit-keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-.loader-parent {
-  width: 100%;
-  height: calc(100vh - 75px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.loader-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.loader-text {
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-.spin-btn {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.spinner {
-  animation: spin infinite 2s linear;
-
-  /*You can increase or decrease the timer (5s) to 
-   increase or decrease the speed of the spinner*/
-}
-
-@keyframes spin {
-from {
-  transform: rotate(0deg);
-}
-to {
-  transform: rotate(360deg);
-}
-}
-
-.white {
-  text-decoration-line: none;
-  color: white;
-}
-
-.currentLink {
-  pointer-events: all;
-}
-
-.center-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 100%;
-}
-
-.center-content-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
-
-.img-container {
-  height: calc(100% - 3rem);
-  width: 100%;
-  position: relative;
-}
-
-.image {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-}
-.text {
-  z-index: 100;
-  position: absolute;
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  left: 150px;
-  top: 350px;
-}
-
-.activity-detail-column {
-  height: 100%;
-}
-
-.react-calendar {
-  border: none;
-  text-shadow: 1px 1px rgba(255, 192, 203, 0.075);
-}
-
-.home-header {
-  width: 100%;
-  height: 100vh;
   background-image: linear-gradient(
-    135deg,
-    rgb(24, 42, 115) 0%,
-    rgb(33, 138, 173) 69%,
-    rgb(32, 167, 173) 89%
+          135deg,
+          rgb(24, 42, 115) 0%,
+          rgb(33, 138, 174) 69%,
+          rgb(32, 167, 172) 89%
   ) !important;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+  height: 100vh;
 }
 
-.activities-link {
-  text-decoration: none;
-  padding: 0.5rem 1.3rem;
-  border: 1px solid white;
-  color: white;
+.masthead .ui.menu .ui.button,
+.ui.menu a.ui.inverted.button {
+  margin-left: 0.5em;
 }
 
-.cancel-btn {
-  text-decoration: none;
-  color: white;
-  background-color: #cecdcd;
-  border: 1px solid #a5a4a4;
-  padding: 0.4rem 0.9rem;
-  border-radius: 5px;
-  width: 4rem;
-  height: 2rem;
+.masthead h1.ui.header {
+  font-size: 4em;
+  font-weight: normal;
 }
 
-.link-list-row {
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  width: fit-content;
-  border-radius: 5px;
-}
-
-.a-link-bg {
-  max-width: 250px;
-  padding: 1rem;
-  position: relative;
-  background-image: linear-gradient(
-    rgb(24, 42, 115) 0%,
-    rgb(33, 138, 173) 69%
-  );
-  padding: 2.5px 1px;
-  border-radius: 2px;
-}
-
-.a-link {
-  padding: 0.1rem 0.7rem;
-  background: white;
-  border-radius: 2px;
-}
-
-.a-link:hover {
-  cursor: pointer;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  padding: auto;
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
 }
